[package]
name = "wordle-helper"
authors = ["itotallyrock <Jeffrey Meyer>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
clap = { version = "3.1.0", features = ["derive"] }
log = "0.4.14"
simple_logger = "2.1.0"
